@@ -2,6 +2,26 @@ bin/pi-erase-metadata
 bin/pidentify
 bin/pimetadata
 bin/pinmap
+build_testing/adc.pl
+build_testing/alt_mode.pl
+build_testing/api_servo.pl
+build_testing/baseline_setup.pl
+build_testing/bmp.pl
+build_testing/i2c.pl
+build_testing/identify.pl
+build_testing/metadata.pl
+build_testing/multi.pl
+build_testing/perlmonks.pl
+build_testing/pot_adc.pl
+build_testing/registered_pins.pl
+build_testing/rtc.pl
+build_testing/sg90_servo.pl
+build_testing/shift.pl
+build_testing/spi.pl
+build_testing/stepper_motor.pl
+build_testing/sysinfo_faq_examples.pl
+build_testing/test_suite_stepper.pl
+build_testing/tripwire.pl
 Changes
 docs/breadboard/adc_basic_example_bb.jpg
 docs/breadboard/brewbuild_test_platform_bb.jpg
@@ -15,29 +35,10 @@ docs/pics/bb_hardware_test_platform.jpg
 docs/schematic/adc_basic_example_schem.jpg
 docs/schematic/dpot_adc_schem.jpg
 docs/sketch/arduino.ino
-examples/adc.pl
-examples/alt_mode.pl
-examples/api_servo.pl
-examples/baseline_setup.pl
-examples/bmp.pl
-examples/i2c.pl
-examples/identify.pl
-examples/metadata.pl
-examples/multi.pl
-examples/perlmonks.pl
-examples/pot_adc.pl
-examples/registered_pins.pl
-examples/rtc.pl
-examples/sg90_servo.pl
-examples/shift.pl
-examples/spi.pl
-examples/stepper_motor.pl
-examples/sysinfo_faq_examples.pl
-examples/test_suite_stepper.pl
-examples/tripwire.pl
 lib/RPi/WiringPi.pm
 lib/RPi/WiringPi/Core.pm
 lib/RPi/WiringPi/FAQ.pod
+lib/RPi/WiringPi/Util.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
